--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "now-express",
+  "name": "emla-zeit",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "MaybePermanent",
@@ -13,7 +12,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
-    "nodemon": "^2.0.4",
     "pretty-time": "^1.1.0",
     "request": "^2.88.2"
   }
